# BookWise

./: .gitignore  README.md  SPEC.md
backend/: .env  bookwise.db  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: books.py  curated.py  generation.py  metrics.py  search.py
backend/app/clients/: openai_llm.py  openlibrary.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/llm/: prompts.py  schema_utils.py
backend/app/observability/: logging.py  metrics.py  request_id.py
backend/app/schemas/: generation.py
backend/app/services/: book_service.py  curated_service.py  generation_service.py
backend/app/tests/: test_books.py  test_curated.py  test_generation.py  test_observability.py  test_search.py
backend/config/: llm.yml
backend/scripts/: resolve_curated_work_ids.py
data/: curated_books.yml
docs/: PRD_for_v2.md  SPEC.md
frontend/: package-lock.json  package.json
frontend/bookwise/: package-lock.json  package.json  vitest.config.ts
frontend/bookwise/src/api/: admin.ts  books.ts  client.ts  curated.ts  endpoints.ts  search.ts
frontend/bookwise/src/app/: router.tsx
frontend/bookwise/src/components/: AdminButton.tsx  BookCard.tsx  BookHeader.tsx  ErrorState.tsx  JsonPretty.tsx  JsonViewer.tsx  QuoteBanner.tsx  SearchBox.tsx  SearchResults.tsx  SectionCard.tsx  SkeletonBookHeader.tsx  StoredBadge.tsx  SurpriseMeButton.tsx  ThemeToggle.tsx
frontend/bookwise/tests/: book-detail-generation.test.tsx  use-generation-section.test.tsx
(+9 files in other folders)
